[JOST-119] - change pom to create attached -sources jar
[JOST-135] - Update Version class with getVersion() and getName() static methods
[JOST-145] - can not create policy file with EnvironmentAttributeDesignator tag
[JOST-147] - Add support for MDUI extensions into OpenSAML2
[JOST-149] - SubjectTypeImplBuilder typo causes invalid documents to be built
[JOST-151] - Fix up some potential concurrency issues with metadata provders and filters
[JOST-152] - Some pom changes for Opensaml2
[JOST-153] - Javadoc fixes
[JOST-154] - FilesystemMetadataProviderTest failed
[JOST-155] - MetadataCredentialResolverCachingTest.testSigning_UnspecToEncryption failed
[JOST-156] - MetadataCredentialResolverCachingTest.testSigning_EncryptionToUnspec failed
[JOST-157] - references to spaces.internet.edu may need changed to wiki.shibboleth.net
[JOST-158] - Update POM for Shib.net Repo and attach generate Javadocs

Changes in Release 2.4.1
=============================================
[JOST-134] - Static helper classes should not use static Loggers
[JOST-137] - Option for BasicSAMLArtifactMapEntryFactory to explicitly serialize the SAML message in the newly created entry
[JOST-139] - Update libs for 2.4.1
[JOST-140] - understoodHeaders fields not initialized in HTTPSOAP11Decoder no args constructor
[JOST-142] - Replay rule passes "null" into replay check if requiredRule not set
[JOST-143] - Metadata refresh occuring every 5 minutes
[JOST-144] - ResourcedBacked metadata provider with local files reloads too often

Changes in Release 2.4.0
=============================================
[JOST-36]  - XACML marshallers and unmarshallers should extend abstract superclasses
[JOST-63] - Investigate whether a fatal metadata filter error can be made to not cause a fatal error in the provider
[JOST-88]  - Create an AttributeConsumingServiceSelector, similar in API to the existing Basic- and AuthnRequest Endpoint selectors
[JOST-100] - BaseMessageDecoder uses java.net.URL equals() for URI comparison